@@ -7,6 +7,7 @@
 
 plugins {
   id 'application'
+  id 'java'
   id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
@@ -28,14 +29,11 @@ javafx {
     ]
 }
 
-apply plugin: 'java'
-
 compileJava {
-    // Manually setting heap size: https://stackoverflow.com/a/37466
-    // Try to use max amount of RAM: https://stackoverflow.com/a/39729522
     options.compilerArgs << '-Xlint:unchecked'
-    options.forkOptions.jvmArgs << '-J-XX:MaxRAMFraction=1 -J-verbosegc' // Might add: -XX:+AggressiveOpts
 }
+
+applicationDefaultJvmArgs = ["-XX:MaxRAMFraction=1", "-verbosegc"]
 
 java {
     modularity.inferModulePath.set(true)
